--- a/artworkdesign/zh_CN_MairinDuffy.tex
+++ b/artworkdesign/zh_CN_MairinDuffy.tex
@@ -1,22 +1,19 @@
-\chapterwithauthor{Máirín Duffy Strode}{Don't Be Shy}
+﻿\chapterwithauthor{Máirín Duffy Strode}{不要含羞}
 
-\authorbio{Máirín Duffy Strode has been using Free and Open Source software since she
-was in high school, and has been a contributor for the past 8 years. She is involved
-in both the Fedora and GNOME communities and has worked on interaction design,
-branding, and/or iconography for a number of prominent FOSS applications such as
-Spacewalk, Anaconda, virt-manager, SELinux and SSSD. She has also been involved
-in outreach efforts teaching children design skills using FOSS tools such as
-GIMP and Inkscape and is a fierce advocate for said tools. She is the team lead
-of the Fedora Design Team and a senior interaction designer with Red Hat, Inc.}
+\authorbio{Máirín Duffy Strode 一直使用免费的开源软件在她高中的时候, 并且在过去的8年里成为了他的贡献者. 
+她参与了Fedora和GNOME社区并且参与合作、品牌的互动设计, 并且或则摄影了一些开源软件的申请，像
+Spacewalk, Anaconda, virt-manager, SELinux 和 SSSD. 她也努力参与教育孩子们使用开源软件设计的技巧，像
+GIMP和Inkscape 这种说是工具有点凶猛的软件. 她是
+Fedora设计队伍的领导并且是Red Hat的高级交互工程设计师 Inc.}
 
-\noindent{}I knew about and used Free and Open Source software for a long time before I
-became a contributor. This was not for lack of trying -- there were a couple of
-false starts, and I succumbed to them mostly out of being too shy and afraid to
-push through them. From the aftermath of those false starts and also from
-on-boarding other designers in FOSS projects, I have five tips to offer to you
-as a designer trying to ramp up as a FOSS contributor:
+\noindent{}我知道并使用自由，开源软件很长一段时间后才成为一个贡献者. 这不是因为缺少尝试 -- 有一对夫妇的
 
-\section*{1. Know that you are needed and wanted (badly!)}
+错误的开始，我还是多过于害羞和害怕他们
+
+推动他们. 从哪些错误开始，也从寄宿在其他开源软件设计者开始, 我要给你五招
+
+作为一个设计师，努力提高作为一个源码的贡献：
+\section*{1. 知道你所需要的而且想要 (急!)}
 
 My first false start happened when I was a first-year computer science student
 at Rensselaer Polytechnic Institute. There was a particular project I used a lot
